<resources>
    <string name="app_name">Boemyo</string>
    <string name="valida_empty">Algum campo está vazio!</string>
    <string name="valida_empty_nome_editar">Seu Nome não pode estar vazio!</string>
    <string name="valida_empty_data_editar">Informe Uma data de Nascimento válida!</string>
    <string name="valida_cpf_editar">Esse CPF não é válido!</string>
    <string name="valida_conexao">Ops, conecte-se a internet!</string>
    <string name="mesa_empty">Informe o número de sua mesa!</string>
    <string name="erro_password">Melhore sua Senha</string>
    <string name="erro_password_login">Senha Incorreta</string>
    <string name="erro_email">Seu e-mail não é Válido</string>
    <string name="erro_exist">Esse e-mail já está em Uso</string>
    <string name="erro_geral">Verifique sua conexão!</string>
    <string name="erro_confirma_senha">Senhas não batem!</string>
    <string name="cancelamento_realizado">Esse pedido já foi cancelado</string>
    <string name="cancelamento_pedido_entregue">Esse pedido já foi entregue</string>
    <string name="cancelamento_ate_cinco">Cancelado sem Cobrança!</string>
    <string name="valida_face_nao_cadastrado">Você ainda não se cadastrou!</string>
    <string name="erro_motivo_cancel">Você precisa selecionar pelo menos 1 motivo!</string>
    <string name="send_email_sucesso">Confirme seu E-mail </string>
    <string name="send_email_erro">Não conseguimos enviar um e-mail para você</string>
    <string name="verific_email_false">Você precisa confirmar seu E-mail</string>
    <string name="send_troca_email_sucesso">E-mail enviado com Sucesso</string>
    <string name="valida_sucesso">Cadastrado com Sucesso</string>
    <string name="valida_cartao_invalido">Cartão Inválido!</string>
    <string name="valida_sucesso_indique">Obrigado pela sua colaboração!</string>
    <string name="login_nao_sucesso">Dados Incorretos</string>
    <string name="dialog_permission_title">Permissões negadas</string>
    <string name="dialog_permission_message">Para utilizar esse app, é necessário aceitar as permissões</string>
    <string name="dialog_autentica_email_title">Verifique seu E-mail</string>
    <string name="dialog_autentica_email_message">Enviamos para você um e-mail, por favor clique no link informado para confirmar sua conta!</string>
    <string name="dialog_qrcode_title">QR Code Invalido</string>
    <string name="dialog_qrcode_message">Esse QR CODE não faz parte da rede Boemyo.</string>
    <string name="dialog_confirma_produto_title">Tem certeza que deseja realizar o pedido?</string>
    <string name="dialog_confirma_produto_message">Após a confirmação do pedido, poderá ser cancelado em no máximo 5 minutos sem nenhuma
    cobrança.</string>
    <string name="dialog_informa_mesa_title">Informe o número da mesa que você se encontra:</string>
    <string name="dialog_confirma_favorito_title">Tem certeza que deseja favoritar </string>
    <string name="dialog_confirma_favorito_message">Após a confirmação você poderá visualizar seus
        locais favoritos na opção Favoritos no menu lateral ou na tela incial.</string>
    <string name="dialog_confirma_pedencias_title">Você precisa encerrar sua comanda:</string>
    <string name="dialog_confirma_pendencias_message">Encontramos valores na sua comanda em aberto, será necessário
    realizar o pagamento para poder sair do estabelecimento!</string>
    <string name="dialog_confirma_cancelar_pedido_title">Deseja realmente cancelar o pedido:</string>
    <string name="dialog_confirma_cancelar_pedido_sem_taxa_message">Não será cobrado nenhuma taxa para
    esse cancelamento!</string>
    <string name="dialog_confirma_cancelar_pedido_com_taxa_message">O tempo limite para cancelamento foi excedido, será
    cobrado uma taxa de R$ 5,00 reais pelo cancelamento</string>
    <string name="dialog_finalizar_cartao_title">Pagamento com Cartão:</string>
    <string name="dialog_valida_gps_title">Localização não está ativa:</string>
    <string name="dialog_valida_gps_message">Por favor habilite seu serviço de localização</string>
    <string name="dialog_title_encerra_comanda">O Boemyo agradece...</string>
    <string name="dialog_message_encerra_comanda">Se necessário ou solicitado apresente essa mensagem na saída do local!
                                                Agradecemos sua preferencia, até a próxima!</string>
    <string name="dialog_title_adiciona_cartao">Nenhum Cartão Encontrado...</string>
    <string name="dialog_message_adiciona_cartao">Para abrir uma comanda é necessário ter pelo menos um cartão
                                                    cadastro!</string>
    <string name="bt_cadastrar">Cadastrar-se</string>
    <string name="bt_login">Login</string>
    <string name="bt_dialog_positive">CONFIRMAR</string>
    <string name="bt_dialog_comanda">COMANDA</string>
    <string name="bt_dialog_nagative">CANCELAR</string>
    <string name="bt_dialog_qrcode">TENTE NOVAMENTE</string>
    <string name="bt_inserir_imagem">Inserir Imagem</string>
    <string name="bt_inserir_cartao">Inserir Cartão</string>
    <string name="tv_label_QR">Leia o QR code do estabelecimento </string>
    <string name="tv_vermais_categoria">Ver Mais </string>
    <string name="tv_termos_uso">Ao cadastrar-se, você concorda com os </string>
    <string name="tv_privacidade">e com a </string>
    <string name="tv_termos_uso_link"> Termos de Uso </string>
    <string name="tv_privacidade_link"> Política de Privacidade</string>
    <string name="tv_horario">Horários</string>
    <string name="tv_endereco">Endereço</string>
    <string name="tv_title_indique">Informe os dados do local</string>
    <string name="bt_label_conhecer_estab">Estabelecimentos </string>
    <string name="bt_label_indicar">Indique</string>
    <string name="bt_label_favoritos">Favoritos</string>
    <string name="bt_label_cardapio">Cardápio</string>
    <string name="bt_label_comanda">Comanda</string>
    <string name="bt_label_atualizar_dados">Concluir Cadastro</string>
    <string name="bt_label_confirmar_pedido">Confirmar Pedido</string>
    <string name="bt_label_confirmar_pagamento">Confirmar Pagamento</string>
    <string name="bt_label_editar_perfil">Atualizar Dados</string>
    <string name="bt_label_sair_estabelecimento">Sair do Estabelecimento</string>
    <string name="bt_label_cadastro_fb">Entrar com Facebook</string>
    <string name="bt_label_login_fb">Continue com Facebook</string>
    <string name="bt_label_finalizar_comanda">Encerrar Comanda</string>
    <string name="bt_label_deixar_estabelecimento">Estou Indo Embora</string>
    <string name="bt_label_adiciona_cartao">Adicionar Cartão</string>
    <string name="bt_label_esqueci_senha">Enviar-me um E-mail</string>
    <string name="bt_label_genero_masculino">Masculino</string>
    <string name="bt_label_genero_feminino">Feminino</string>
    <string name="bt_label_motivo_cancelamento">Enviar Motivo</string>
    <string name="tv_label_finalizar_dados">Finalize seu Cadastro</string>
    <string name="tv_label_abrir_cadastro">Criar Conta</string>
    <string name="tv_label_esqueci_senha">Esqueci a Senha</string>
    <string name="tv_qrdialog_title">Está em um estabelecimento?</string>
    <string name="tv_qrdialog_subtitle">Leia o QRcode para acessar o cardápio</string>
    <string name="title_activity_find_place_maps">Map</string>
    <string name="tv_comanda">Comanda</string>
    <string name="tv_cardapio">Cardápio</string>
    <string name="tv_desc_produto">Descrição</string>
    <string name="tv_valor_produto">Valor:</string>
    <string name="tv_qtde_produto">Quantidade</string>
    <string name="tv_obs_produto">Observações</string>
    <string name="tv_adicional_produto">Adicionais</string>
    <string name="tv_subtotal">Total</string>
    <string name="tv_obs_hint_produto">Algo que deseja nos informar?</string>
    <string name="tv_title_pag_local">Estabelecimento</string>
    <string name="tv_title_feedback">Conte-nos como foi a sua experiência, utizando o Boemyo:</string>
    <string name="title_img">Selecione a Imagem:</string>
    <string name="tv_subtile_pag_local">Realize o pagamento no local</string>
    <string name="tv_selecione_pagamento">Selecione a forma de pagamento:</string>
    <string name="tv_informe_email">Informe abaixo o E-mail cadastrado:</string>
    <string name="tv_desc_app_tutorial">Boemyo foi pensado em você, que gosta de praticidade,
                                            e não gosta de esperar.</string>
    <string name="tv_title_dois_tutorial">Encontre estabelecimentos próximos à você</string>
    <string name="tv_title_tres_tutorial">Está em um Estabelecimento? Leia o QRCODE para abrir sua comanda!</string>
    <string name="tv_title_quatro_tutorial">Possui uma comanda aberta? Cardápio do local estará disponível a
                                                qualquer momento!</string>
    <string name="tv_title_cinco_tutorial">Escolheu um produto do cardápio? Faça o pedido e já realize o pagamento direto pelo Boemyo!</string>
    <string name="tv_title_seis_tutorial">Acesse facilmente o cardápio ou sua comanda, a qualquer momento!</string>
    <string name="tv_title_sete_tutorial">Está na hora de ir embora? Pague sua comanda diretamente pelo Boemyo.
                                            Chega de Filas!</string>
    <string name="delete">EXCLUIR</string>
    <string name="cancela_pedido">CANCELAR PEDIDO</string>
    <string name="pagamento_local">Dinheiro</string>
    <string name="pagamento_null">Adicione um Cartão</string>
    <string name="pagamento_adiciona">Adicionar</string>
    <string name="tv_title_motivo_cancel">Selecione um Motivo para o seu Cancelamento:</string>
    <string name="tv_security_info">Para sua maior segurança as informações de seu cartão são armazenadas
                                    em um ambiente altamente seguro com a nossa parceira Cielo</string>
    <string name="menssagem_debito">O Boemyo está fazendo constantes melhorias. Infelizmente ainda não estamos realizando o pagamento por cartão de Débito .
        Mas fique tranquilo, logo logo você poderá realizar o pagamento direto pelo Boemyo!</string>
    <string name="info_um">O Boemyo foi pensado para quem ainda gostar de estar presente em bares e restaurantes</string>
    <string name="info_dois">Uma nova forma de ir em seus estabelecimentos favoritos</string>
    <string name="info_tres">Faça tudo pelo Boemyo, desde escolher seu prato até o pagamento!</string>
    <string name="tab_um"> PROXIMOS A MIM</string>
    <string name="tab_dois"> LOCAIS</string>
    <string name="title_cadastro">Cadastro</string>
    <string name="title_procura">Encontre Estabelecimentos</string>
    <string name="title_indique">Ajude-nos</string>
    <string name="title_favoritos">Favoritos</string>
    <string name="title_categoria">Escolha uma Categoria:</string>
    <string name="title_produto">Escolha um Prato:</string>
    <string name="title_comanda">Comanda</string>
    <string name="title_pagamentos">Meios de Pagamento:</string>
    <string name="title_escolhe_pagamento">Meios de Pagamento</string>
    <string name="title_adiciona_cartao">Informe os dados do Cartão:</string>
    <string name="title_estabelecimento">Estabelecimento</string>
    <string name="sub_title_cadastro">Informe seus dados pessoais:</string>
    <string name="sub_title_favoritos">Seus locais favoritos</string>
    <string name="title_esqueci_senha">Esqueci Minha Senha</string>
    <string name="title_editar_perfil">Seu Perfil:</string>
    <string name="title_termos">Termos de Uso</string>
    <string name="title_privacidades">Política de Privacidade</string>
    <string name="motivos_um">Demora Excessiva para receber o pedido</string>
    <string name="motivos_dois">Preciso deixar o estabelecimento</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>