<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.boemyo.Activitys.MainEstabelecimentoActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_label_cardapio"
        android:id="@+id/bt_cardapio"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_label_comanda"
        android:id="@+id/bt_comanda"
        android:layout_below="@+id/bt_cardapio"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_label_sair_estabelecimento"
        android:id="@+id/bt_sair_estabelecimento"
        android:layout_below="@+id/bt_comanda"/>
</RelativeLayout>
