<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.MotivoCancelamentoActivity"
    android:background="@color/color_grey">

    <include android:id="@+id/tb_motivos_cancelamento"
             layout="@layout/toolbar"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title_motivos_cancelamento"
        android:layout_below="@+id/tb_motivos_cancelamento"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/tv_title_motivo_cancel"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_radio_motivos_cancelamento"
        android:layout_below="@+id/tv_title_motivos_cancelamento"
        android:layout_marginTop="16dp"
        android:background="@color/colorText">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_motivo_um"
                android:layout_marginTop="10dp"
                android:text="@string/motivos_um"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:onClick="rbClicked"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_motivo_dois"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/motivos_dois"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:onClick="rbClicked"/>

        </RadioGroup>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_confirma_motivo_cancelamento"
        android:background="@drawable/ripple_efect"
        android:text="@string/bt_label_motivo_cancelamento"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorText"/>

</RelativeLayout>