<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.boemyo.Activitys.HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <include android:id="@+id/conexao_home"
        layout="@layout/conexao"
        android:visibility="gone"
        ></include>
    <com.dlazaro66.qrcodereaderview.QRCodeReaderView
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/rl_qrcode_dialog"
        android:layout_centerInParent="true"
        android:background="@drawable/style_qrdialog_button">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:text="@string/tv_qrdialog_title"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/qrcode_scan_gray"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="12sp"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorAccent"
            android:text="@string/tv_qrdialog_subtitle"
            android:textStyle="bold"/>
    </RelativeLayout>
    <include android:id="@+id/botton_nav_home"
        layout="@layout/navigation_bottom"/>

</RelativeLayout>
