<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_perfil_estab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.MyThemeWrite"
    tools:context="br.com.boemyo.Activitys.PerfilEstabelecimentoActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_perfil_estab"
        android:layout_height="250dp"
        android:layout_width="match_parent"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_tb_perfil_estab"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/iv_estab"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>
            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_perfil_estab"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:elevation="0dp"
                android:minHeight="0dp"
                app:layout_collapseMode="pin"
                />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_info_estab">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_desc_estab"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:textColor="@color/colorSecondaryText"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_horario"
                android:layout_below="@+id/tv_desc_estab"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:background="@mipmap/ic_clock_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:text="@string/tv_horario"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/colorPrimaryText"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_horario_estab"
                android:layout_below="@+id/ll_horario"
                android:textColor="@color/colorSecondaryText"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="14dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_endereco"
                android:layout_below="@+id/tv_horario_estab"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:background="@mipmap/ic_map_marker_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:text="@string/tv_endereco"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/colorPrimaryText"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_endereco_estab"
                android:layout_below="@+id/ll_endereco"
                android:textColor="@color/colorSecondaryText"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="14dp"/>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
